<resources>
    <string name="app_name">Sports Seeker</string>
    <string name="search">Search</string>
    <string name="games">Games</string>
    <string name="golf">Golf</string>
    <string name="park">Park</string>
    <string name="hall">Hall</string>
    <string name="school">School</string>
    <string name="tennis">Tennis</string>
    <string name="explore">Explore Surrey</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="website">Website</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="meet_up">MEET UP</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="remove_email">Remove %1$s from meetup?</string>
    <string name="shared">Shared with me</string>
    <string name="email_removed">%1$s removed from meetup</string>
    <string name="email_added">%1$s added to meetup</string>
    <string name="email_missing">Could not find user with email %1$s</string>
    <string name="add_user">Add User</string>
    <string name="my_meetups">My Meetups</string>
    <string name="meet_loc_label">Location: %1$s</string>
    <string name="meet_date_label">Date: %1$s</string>
    <string name="invited">Invited Users</string>
    <string name="meet_title">Let\'s meet up at %1$s on %2$s</string>
    <string-array name="tempLocations">
        <item>Location name</item>
    </string-array>
    <string-array name="meetUpList">
        <item>Meet Up List</item>
    </string-array>
</resources>
