<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".SearchActivity">


    <EditText
        android:id="@+id/search"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/search"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="find"
        android:text="Search" />

    <TextView
        android:id="@+id/explore_surrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explore"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tag_school"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAllCaps="false"
            android:onClick="TagButtonClicked"
            android:background="@drawable/button_custom"
            android:padding="5dp"
            android:text="@string/school" />

        <Button
            android:id="@+id/tag_tennis"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:onClick="TagButtonClicked"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAllCaps="false"
            android:background="@drawable/button_custom"
            android:padding="5dp"
            android:text="@string/tennis" />

        <Button
            android:id="@+id/tag_park"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:onClick="TagButtonClicked"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAllCaps="false"
            android:background="@drawable/button_custom"
            android:padding="5dp"
            android:text="@string/park" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tag_hall"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:onClick="TagButtonClicked"
            android:layout_margin="10dp"
            android:textAllCaps="false"
            android:background="@drawable/button_custom"
            android:padding="5dp"
            android:text="@string/hall" />

        <Button
            android:id="@+id/tag_golf"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="TagButtonClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAllCaps="false"
            android:background="@drawable/button_custom"
            android:padding="5dp"
            android:text="@string/golf" />

        <Button
            android:id="@+id/tag_games"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="TagButtonClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAllCaps="false"
            android:background="@drawable/button_custom"
            android:padding="5dp"
            android:text="@string/games" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="?android:attr/listDivider" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <ListView
        android:id="@+id/searchResults"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:entries="@array/tempLocations"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />


</LinearLayout>