<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meetup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LocationDescription">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/NameTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/name"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="16dp" />


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            tools:layout_editor_absoluteX="225dp"
            tools:layout_editor_absoluteY="16dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/locDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/location"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="84dp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="84dp" />

        <ImageButton
            android:id="@+id/showOnMapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_google_maps_pin"
            tools:layout_editor_absoluteX="335dp"
            tools:layout_editor_absoluteY="84dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/TypeTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/type"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="180dp" />
        <TextView
            android:id="@+id/type"
            android:layout_width="208dp"
            android:layout_height="29dp"
            android:layout_marginLeft="20dp"
            tools:layout_editor_absoluteX="200dp"
            tools:layout_editor_absoluteY="244dp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/webDes"
            android:layout_width="66dp"
            android:layout_height="26dp"
            android:layout_marginLeft="5dp"
            android:text="@string/website"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="273dp" />
        <TextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="227dp"
            tools:layout_editor_absoluteY="196dp" />

    </LinearLayout>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/chip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meet_up"
        android:onClick="meet_up"
        tools:layout_editor_absoluteX="321dp"
        tools:layout_editor_absoluteY="629dp" />

</LinearLayout>